# VBox_tests_runner

./: .gitignore  README.md  config.json  pyproject.toml  tasks.py  test2.py
frameworks/: console.py
frameworks/VBox/: VBox.py  __init__.py  commands.py  virtualmachine.py
frameworks/decorators/: decorators.py
frameworks/host_control/: FileUtils.py  __init__.py
frameworks/host_control/host_info/: HostInfo.py
frameworks/report/: report.py
frameworks/ssh_client/: ssh_client.py
frameworks/telegram/: telegram.py
scripts/: myscript.service
tests/: desktop_tests.py  multiprocessing.py  run_desktop_tests.py
tests/data/: __init__.py  host_data.py  proxy_data.py  test_data.py
tests/data/vm_data/: LinuxData.py  __init__.py  vm_data.py
tests/scripts/: myscript.service  script.sh
tests/tools/: desktop_report.py
