[tool.poetry]
name = "VBox_Tests_Runner"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
invoke = "*"
rich = "*"
py7zr = "*"
requests = "*"
paramiko = "*"
distro = "^1.8.0"
pandas = "*"
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
VBox = { git = "https://github.com/l8556/VBox_Wrapper.git", branch = "feature/minor-refactoring" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
