[tool.poetry]
name = "VBox_Tests_Runner"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
invoke = "^2"
rich = "^13"
paramiko = "^3"
pandas = "^2"
elevate = "^0.1.3"
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
VBoxWrapper = { git = "https://github.com/l8556/VBoxWrapper.git", branch = "feature/minor-refactoring" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
